--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="pin-generator half-width">
-                    <input class="form-control" type="text">
-                    <button class="generate-btn">Generate Pin</button>
+                    <input id="generate-input" class="form-control" type="text">
+                    <button onclick="generatePin()" class="generate-btn">Generate Pin</button>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="input-section half-width">
-                    <input class="form-control" type="text">
+                    <input id="typed-numbers" class="form-control" type="text">
                     <div class="numbers">
-                        <div class="calc-body">
+                        <div id="key-pad" class="calc-body">
                             <div class="calc-button-row">
                               <div class="button">7</div>
                               <div class="button">8</div>
@@ -42,7 +42,7 @@
                                 <div class="button">C</div>
                             </div>
                             <div>
-                                <button type="submit" class="submit-btn">Submit</button>
+                                <button onclick="submission()" type="submit" class="submit-btn">Submit</button>
                                 <p class="action-left">3 try left</p>
                             </div>
                     </div>
@@ -50,9 +50,60 @@
             </div>
         </div>
         <div class="notify-section">
-            <p class="notify">❌ Pin Didn't Match, Please try again</p>
-            <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
+            <p id="notify-failure" class="notify">❌ Pin Didn't Match, Please try again</p>
+            <p id="notify-success" class="notify">✅ Pin Matched... Secret door is opening for you</p>
         </div>
     </div>
+
+    <script>
+        //Generate  button function
+        function getPin(){
+            const pin = Math.round(Math.random() * 10000);
+            const pinString = pin + '';
+            if(pinString.length == 4){
+                return pin;
+            }
+            else{
+                //console.log("Got 3 digit pin: "+pin);
+                return getPin();
+            }
+
+        }
+        function generatePin(){
+            const randomNumber = getPin();
+            document.getElementById('generate-input').value = randomNumber;
+        }
+        document.getElementById('key-pad').addEventListener('click',function(event){
+            const number = event.target.innerText;
+            const calculatorInput = document.getElementById('typed-numbers');
+            if(isNaN(number)){
+                if(number == 'C'){
+                    calculatorInput.value = '';
+                }
+            }
+            else{
+            const previousNumber = calculatorInput.value;
+            const newNumber = previousNumber + number;
+            calculatorInput.value = newNumber;
+            }
+        });
+
+        function submission(){
+            const number = document.getElementById('typed-numbers').value;
+            const generateNumber = document.getElementById('generate-input').value;
+            const notifyFail = document.getElementById('notify-failure');
+            const notifySuccess = document.getElementById('notify-success');
+            if(number == generateNumber){
+                notifySuccess.style.display = "block";
+                notifyFail.style.display = "none";
+            }
+            else{
+                notifyFail.style.display = "block";
+                notifySuccess.style.display = "none";
+            }
+            
+        }
+        
+    </script>
 </body>
 </html>
